--- a/src/Components/Styles/Layout.css
+++ b/src/Components/Styles/Layout.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
 .overallContainer {
   width: 100%;
 }
@@ -5,9 +9,10 @@
 .navbarContainer {
   height: 60px;
   box-sizing: border-box;
-  background-color: #19B5FE;
+  background-color: #0FA3B1;
   box-shadow: 0px 0px 7px 1px #1a1a1a;
-  z-index: 10000000000000000000000000000000000000000000000000;
+  z-index: 3;
+  position: relative;
 }
 
 .infoContainer {
@@ -16,20 +21,22 @@
   box-sizing: border-box;
   display: flex;
   z-index: 1;
-
 }
 
 .sidebarContainer {
-  width: 350px;
+  width: 400px;
   box-sizing: border-box;
-  background-color: #F5D76E;
-  z-index: 1;
+  background-color: #E6E8E6;
+  z-index: 2;
   padding-top: 10px;
+  box-shadow: -2px 0px 10px 1px #1a1a1a;
 }
 
 .contentContainer {
   width: 100%;
   box-sizing: border-box;
+  background-color: #F9F7F3;
+  z-index: 1;
 }
 
 
@@ -39,10 +46,28 @@
 }
 
 .sidebarIngredientList {
-  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  border-radius: 10px;
+  background-color: #BCD4DE;
+  width: 80%;
+  margin: 10px auto;
+  box-sizing: border-box;
+  padding: 10px 0px;
+  max-height: 300px;
+  overflow-y: auto;
 }
 
-.ingredientListItem {
-  margin-bottom: 10px;
+.sidebarInputSection {
+  margin-bottom: 20px;
+}
+
+.addIngredientButton {
+  border: none;
+  padding: 10px 70px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: #0FA3B1;
+  outline: none;
 }
