--- a/src/Components/Styles/Layout.css
+++ b/src/Components/Styles/Layout.css
@@ -28,7 +28,6 @@
   box-sizing: border-box;
   background-color: #E6E8E6;
   z-index: 2;
-  padding-top: 10px;
   box-shadow: -2px 0px 10px 1px #1a1a1a;
 }
 
@@ -60,7 +59,9 @@
 }
 
 .sidebarInputSection {
-  margin-bottom: 20px;
+  padding-top: 20px;
+  box-sizing: border-box;
+  height: calc(100vh - 120px);
 }
 
 .addIngredientButton {
@@ -70,4 +71,46 @@
   cursor: pointer;
   background-color: #0FA3B1;
   outline: none;
+  margin-bottom: 20px;
+}
+
+.contentTitle {
+  margin: 15px;
+  font-weight: bold;
+}
+
+.contentRecipeContainer {
+  width: 90%;
+  margin: 0 auto;
+  background-color: #0FA3B1;
+  height: calc(100vh - 150px);
+  overflow-y: auto;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.recipeSection {
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  background-color: #BCD4DE;
+  margin: 10px auto;
+}
+
+.recipeSectionImage {
+  width: 100%;
+  height: 300px;
+}
+
+.recipeSectionImage img {
+  width: 100%;
+  height: 100%;
+}
+
+.recipeSectionInfo {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
 }
